--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Room</title>
-        <link rel="stylesheet" href="css/rooms.css"/>
+    <link rel="stylesheet" href="css/rooms.css"/>
 </head>
 <body>
 <div class = "form">
     <h1>Вход</h1>
     <div class = "error-text" style = "padding: 8px 0; border-radius: 5px; color: #fa0505; text-align: center;">
-        <p id="textError"></p>
+        <p id="textError" style = "display: none;">Неправильный номер комнаты</p>
     </div>
     <form>
         <div class = "input-form">
@@ -17,7 +17,7 @@
                    name = "roomUserNumber" id = "roomUserNumber" placeholder = "№ комнаты ">
         </div>
         <div class = "input-form">
-            <input type="submit" value="Войти" display="block" onclick="getInfoAboutRoom()"/>
+            <input type="button" value="Войти" display="block" onclick="getInfoAboutRoom()"/>
         </div>
     </form>
     <p><a href="room">Создать комнату</a></p>
@@ -27,18 +27,22 @@
        const url = './api/v1/room/';
        function getInfoAboutRoom() {
            fetch(url + document.getElementById("roomUserNumber").value, {
-            method: 'GET'
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json'
+            }
             })
                  .then(response => {
                      if (response.ok) {
                          response.json().then(function (data) {
-                            if(data === 'false') {
-                                document.getElementById('textError').value='Неправильный номер комнаты';
+                            if(data === false) {
+                                document.getElementById('textError').style.display='';
+
                                 console.log("Неправильный пароль");
-                                window.location.href = '/index.html';
                             } else {
                                console.log("Правильный пароль");
-                                window.location.href = 'LogIn';
+                                let logInUrl = 'LogIn/' + document.getElementById('roomUserNumber').value;
+                                window.location.href = logInUrl;
                             }
                       })
                      }
